[package]
name = "curious-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
rayon = "1.9.0"
reqwest = { version = "0.11.26", features = ["blocking"] }
parquet = "50.0.0"
scraper = "0.19.0"
